switch to distroless java and upgrade kubernetes resources for deprecated api versions